# notebook_student_ft_bert

./: pyproject.toml  requirements.txt  student_-_cours_ft_bert.ipynb
