[project]
name = "cours-tp-bert"
version = "0.1.0"
description = ""
authors = [
    {name = "Erwan"}
]
readme = "README.md"
requires-python = "3.12.6"
dependencies = [
    "transformers (>=4.51.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "bertviz (>=1.4.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false